--- a/LI2/CMakeLists.txt
+++ b/LI2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LI2 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(LI2 main.c dados.c dados.h interface.c interface.h logica.c logica.h)
+add_executable(LI2 main.c dados.c dados.h interface.c interface.h logica.c logica.h lista.c lista.h)
